--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,13 +1,2 @@
-* {
-  box-sizing: border-box;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: arial, helvetica, sans-serif;
-  font-size: 14px;
-  color: #333;
-  background-color: #FFF;
-}
+@import 'variables.less';
+@import 'overrides.less';
