Markup basic app

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,2 +1,6 @@
 @import 'variables.less';
 @import 'overrides.less';
+@import 'app.less';
+@import 'preview.less';
+@import 'layers.less';
+@import 'timeline.less';
